Update versions and formatting.